# tsui

./: .beans.yml  .envrc  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.beads/: metadata.json
.beans/: .gitignore
.flox/: env.json
.flox/cache/: upgrade-checks.json
.flox/env/: manifest.toml
.flox/run/: x86_64-linux.tsui.dev  x86_64-linux.tsui.run
.kinora/: config.styx
.serena/: project.yml
apps/tsui-cli/: Cargo.toml
core/tsui-app/: Cargo.toml
core/tsui-model/: Cargo.toml
core/tsui-model/src/: lib.rs
core/tsui-plugin/: Cargo.toml
core/tsui-view/: Cargo.toml
core/tsui-view/src/: lib.rs
core/tsui-viewmodel/: Cargo.toml
core/tsui-viewmodel/src/: lib.rs
models/tsui-registry/: Cargo.toml
plugins/tsui-nu/: Cargo.toml
plugins/tsui-roam/: Cargo.toml
viewmodels/tsui-layout/: Cargo.toml
views/tsui-egui/: Cargo.toml
