[workspace]
members = [
    "core/*",
    "models/*",
    "views/*",
    "viewmodels/*",
    "plugins/*",
    "apps/*",
]
exclude = [
]
resolver = "3"

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.93.0"
license = "MIT OR Apache-2.0"
homepage = "https://tsui.edger.dev"
repository = "https://github.com/edger-dev/tsui"
authors = ["YJ Park <yjpark@gmail.com>"]

[workspace.dependencies]

# Crates
tsui-model = { path = "core/tsui-model", version = "0.1.0-dev" }
tsui-view = { path = "core/tsui-view", version = "0.1.0-dev" }
tsui-viewmodel = { path = "core/tsui-viewmodel", version = "0.1.0-dev" }
tsui-plugin = { path = "core/tsui-plugin", version = "0.1.0-dev" }
tsui-app = { path = "core/tsui-app", version = "0.1.0-dev" }

# Utils
log = { version = "0.4.29", features = ["kv"] }
rootcause = "0.11.1"
facet = "0.43.2"

# Tests
rstest = "0.26.1"
